Compile issue solved - redis